# aemics_stm32g4xx_drivers

./: Cargo.toml  README.md
examples/: usb_echo.rs  usb_print.rs
src/: usb.rs
